Fixes flow errors + aligns chart
* Fix flow errors for the NetworkChart PR #1232

* Properly align the network panel rows

This commit changes the implementation from using the screen sizing, to
measuring the component with the WithSize higher order component. It
removed some CSS margins and padding that was getting in the way of the
layout as well.

Some of the methods were broken out, due to the VirtualListRow not
updating when the props were changing. I added a memoized function that
accepts the current props, and generates an array of the
NetworkChartRowProps that will properly trigger the VirtualListRow to
re-render. This update removed the React index values, as that is
handled by the VirtualListRow.

* Update snapshots for the network chart

--- a/src/components/network-chart/index.css
+++ b/src/components/network-chart/index.css
@@ -10,7 +10,6 @@
   -moz-user-select: none;
   user-select: none;
   cursor: default;
-  padding: 0 5px;
 }
 
 .networkChart .treeViewBody .treeViewBodyInnerWrapper {
@@ -56,7 +55,6 @@
   border-radius: 2px;
   height: 1.2em;
   flex-grow: 1;
-  margin-left: 4px;
   position: absolute;
   margin-top: 0.15em;
   opacity: 0.6;
